--- a/README
+++ b/README
@@ -9,6 +9,9 @@ https://en.wikipedia.org/wiki/Fentanyl
 # heroin
 https://en.wikipedia.org/wiki/Heroin
 
+# mass murder
+https://en.wikipedia.org/wiki/Mass_murder
+
 # nederland
 https://nl.wikipedia.org/wiki/Nederland
 
