--- a/README
+++ b/README
@@ -12,7 +12,7 @@ https://en.wikipedia.org/wiki/Heroin
 # mass murder
 https://en.wikipedia.org/wiki/Mass_murder
 
-# nederland
-https://nl.wikipedia.org/wiki/Nederland
+# staat der nederlanden
+https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
 
-nederland ® 2002-2021
+staat der nederlanden ® 2002-2021
