--- a/README
+++ b/README
@@ -2,6 +2,8 @@
 | white-revolution |
 --------------------
 
+# psychiatry
+https://en.wikipedia.org/wiki/Psychiatry
 
 # fentanyl
 https://en.wikipedia.org/wiki/Fentanyl
